--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   auto_size_text: 3.0.0
   package_info_plus: 8.1.0
   dio: 5.7.0
-  # firebase_core: 3.6.0
+  firebase_core: 3.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
