--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   package_info_plus: 8.1.0
   dio: 5.7.0
   firebase_core: 3.6.0
+  firebase_auth: 5.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
